--- a/my-workflow/web-app/package.json
+++ b/my-workflow/web-app/package.json
@@ -26,9 +26,11 @@
     "d3": "^7.8.5",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.41",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
-    "styled-components": "^6.1.6"
+    "styled-components": "^6.1.6",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.4.1",
