--- a/my-workflow/web-app/package.json
+++ b/my-workflow/web-app/package.json
@@ -22,8 +22,7 @@
     "@remix-run/node": "^2.4.1",
     "@remix-run/react": "^2.4.1",
     "@remix-run/serve": "^2.4.1",
-    "@types/d3": "^7.4.3",
-    "d3": "^7.8.5",
+    "echarts": "^5.4.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
     "react-data-grid": "^7.0.0-beta.41",
