解决动态iconify加载不能正确生成css样式表的问题

--- a/my-remix-app/package.json
+++ b/my-remix-app/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.82",
     "@iconify-json/mdi": "^1.1.66",
+    "@iconify-json/ph": "^1.1.13",
     "@iconify/tailwind": "^1.1.1",
     "@remix-run/dev": "^2.9.2",
     "@types/react": "^18.2.20",
