--- a/my-remix-app/package.json
+++ b/my-remix-app/package.json
@@ -15,6 +15,7 @@
     "@remix-run/react": "^2.9.2",
     "@remix-run/serve": "^2.9.2",
     "isbot": "^4.1.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
@@ -22,11 +23,14 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@iconify-json/ion": "^1.1.18",
     "@iconify-json/material-symbols": "^1.1.82",
     "@iconify-json/mdi": "^1.1.66",
     "@iconify-json/ph": "^1.1.13",
+    "@iconify-json/solar": "^1.1.9",
     "@iconify/tailwind": "^1.1.1",
     "@remix-run/dev": "^2.9.2",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
